--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
@@ -18,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
