--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://192.168.0.103:5000
-# VITE_API_URL=https://taskprobackend.codevionix.com
+# VITE_API_URL=http://192.168.0.103:5000
+VITE_API_URL=https://taskprobackend.codevionix.com
